# log11

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/log11/: __init__.py  main.py
tests/: __init__.py  test.py  test_logger.py
