[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log11"
version = "0.1.2"
description = "A Python logging library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "vincentdeneuf", email = "your.email@example.com" },
]

dependencies = [
  "loguru>=0.7.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
]

keywords = ["logging", "log", "logger", "loguru"]

[project.urls]
Homepage = "https://github.com/vincentdeneuf/log11"
Repository = "https://github.com/vincentdeneuf/log11"
Issues = "https://github.com/vincentdeneuf/log11/issues"

[dependency-groups]
dev = [
  "ruff>=0.2",
  "pytest>=8",
  "build>=1",
  "twine>=5",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]